# chesscog

./: .buildinfo  .gitignore  Dockerfile  LICENSE  README.md  chesscog.core.dataset.html  chesscog.core.html  chesscog.core.io.html  chesscog.core.training.html  chesscog.corner_detection.html  chesscog.data_synthesis.html  chesscog.html  chesscog.occupancy_classifier.html  chesscog.piece_classifier.html  chesscog.recognition.html  chesscog.report.html  chesscog.transfer_learning.html  cpu.Dockerfile  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.circleci/: config.yml
.github/workflows/: build.yml  notify_release.yml  python-build.yml  sphinx_docs.yml
_sources/: chesscog.core.rst.txt  chesscog.corner_detection.rst.txt  chesscog.occupancy_classifier.rst.txt  chesscog.report.rst.txt  chesscog.rst.txt  index.rst.txt
chesscog/: __init__.py  util.py
chesscog/config/: __init__.py  config.py  paths.py
chesscog/core/: __init__.py  coordinates.py  evaluation.py  exceptions.py  models.py  registry.py  statistics.py
chesscog/corner_detection/: __init__.py  create_configs.py  detect_corners.py  evaluate.py  find_best_configs.py  visualise.py  visualize.py
chesscog/data_synthesis/: __init__.py  create_fens.py  download_dataset.py  download_pgn.py  split_dataset.py  visualize.py
chesscog/occupancy_classifier/: __init__.py  create_configs.py  create_dataset.py  data.ipynb  dataset.py  download_model.py  eval.ipynb  evaluate.py  models.py  networks.py  train.ipynb  train.py
chesscog/piece_classifier/: __init__.py  create_configs.py  create_dataset.py  download_model.py  evaluate.py  models.py  train.py
chesscog/recognition/: __init__.py  evaluate.py  recognition.py
chesscog/report/: __init__.py  analyze_misclassified_positions.py  compute_confusion_matrix.py  prepare_classifier_results.py  prepare_confusion_matrix.py  prepare_error_distribution.py  prepare_occupancy_classifier_results.py  prepare_recognition_results.py
chesscog/synthesised_data/: download_dataset.py  run.sh
chesscog/synthesized_data/: download_dataset.py  download_pgn.py  visualize.py
chesscog/transfer_learning/: __init__.py  create_dataset.py  (+5 more)
config/: _classifier_base.yaml  corner_detection.yaml
data/: fens.txt
docker/: jupyter.Dockerfile  main.Dockerfile
docs/: .gitignore  buildsite.sh
notebooks/: corner_detection copy.ipynb  corner_detection.ipynb  edge_gradients.ipynb
results/: occupancy_classifier.csv
scripts/: generate_docs.sh  synthesize_data.py
tests/: test_version.py
utils/: bump_version.py
(+104 files in other folders)
