[tool.poetry]
name = "chess-recognition"
version = "0.1.0"
description = ""
authors = ["Georg Wölflein <georgw7777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
googledrivedownloader = "^0.4"
opencv-python = "^4.4.0"
numpy = "^1.19.2"
pillow = "^7.2.0"
matplotlib = "^3.3.2"
python-chess = "^1.1.0"
torch = "^1.6.0"
torchvision = "^0.7.0"
tensorboard = "^2.3.0"
yacs = "^0.1.8"
pyyaml = "^5.3.1"
pandas = "^1.1.3"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.8"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
