[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "chesscog"
version = "0.2.5"
description = ""
authors = [ "Georg Wölflein <georgw7777@gmail.com>",]
include = [ "config/*.yaml", "config/**/_*.yaml",]
[[tool.poetry.packages]]
include = "chesscog"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.4.0"
numpy = "^1.19.2"
pillow = "^7.2.0"
matplotlib = "^3.3.2"
python-chess = "^1.1.0"
torch = "^1.6.0"
torchvision = "^0.7.0"
tensorboard = "^2.3.0"
pandas = "^1.1.3"
scikit-learn = "^0.23.2"
tqdm = "^4.51.0"
googledrivedownloader = "^0.4"
recap = "^0.1.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.8"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pytest = "^6.1.1"
toml = "^0.10.2"
